crates/tui/tests/storybook/snapshots/app_dialog_command__ask_user_question_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---












─ Auth method ──────────────────────────────────────────────────────────────────
 Which authentication method should I use?
  1. OAuth
     redirect to provider login
  2. API key
     paste a secret token
  3. Anonymous
     skip auth entirely
 press tab to add your own answer…
 ○ normal                                                                 1:1 0%
