crates/tui/tests/storybook/snapshots/app_dialog_command__help_overlay.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 60 18
  2   4   1 fg=AnsiValue(244)
  2   5   6 fg=AnsiValue(244) attrs=bold|dim
  2  11  14 fg=Grey attrs=dim
  2  25  30 fg=AnsiValue(244)
  3   4   1 fg=AnsiValue(244)
  3   5   8 fg=AnsiValue(117) attrs=bold
  3  53   1 bg=AnsiValue(243)
  3  54   1 fg=AnsiValue(244)
  4   4   1 fg=AnsiValue(244)
  4   7   8 fg=AnsiValue(208) attrs=bold
  4  53   1 bg=AnsiValue(243)
  4  54   1 fg=AnsiValue(244)
  5   4   1 fg=AnsiValue(244)
  5  53   1 bg=AnsiValue(243)
  5  54   1 fg=AnsiValue(244)
  6   4   1 fg=AnsiValue(244)
  6   7   7 fg=AnsiValue(208) attrs=bold
  6  53   1 bg=AnsiValue(235)
  6  54   1 fg=AnsiValue(244)
  7   4   1 fg=AnsiValue(244)
  7   7   6 fg=AnsiValue(208) attrs=bold
  7  53   1 bg=AnsiValue(235)
  7  54   1 fg=AnsiValue(244)
  8   4   1 fg=AnsiValue(244)
  8  53   1 bg=AnsiValue(235)
  8  54   1 fg=AnsiValue(244)
  9   4   1 fg=AnsiValue(244)
  9   5   4 fg=AnsiValue(117) attrs=bold
  9  53   1 bg=AnsiValue(235)
  9  54   1 fg=AnsiValue(244)
 10   4   1 fg=AnsiValue(244)
 10   7   5 fg=AnsiValue(208) attrs=bold
 10  53   1 bg=AnsiValue(235)
 10  54   1 fg=AnsiValue(244)
 11   4   1 fg=AnsiValue(244)
 11   7  19 fg=AnsiValue(208) attrs=bold
 11  53   1 bg=AnsiValue(235)
 11  54   1 fg=AnsiValue(244)
 12   4   1 fg=AnsiValue(244)
 12   7  20 fg=AnsiValue(208) attrs=bold
 12  53   1 bg=AnsiValue(235)
 12  54   1 fg=AnsiValue(244)
 13   4   1 fg=AnsiValue(244)
 13   7   6 fg=AnsiValue(208) attrs=bold
 13  53   1 bg=AnsiValue(235)
 13  54   1 fg=AnsiValue(244)
 14   0   4 fg=AnsiValue(237)
 14   4  51 fg=AnsiValue(244)
 14  55   5 fg=AnsiValue(237)
 16   0  60 fg=AnsiValue(237)
 17   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 17  10  44 bg=AnsiValue(233)
 17  54   6 fg=AnsiValue(244) bg=AnsiValue(233)
