crates/tui/tests/storybook/snapshots/app_dialog_command__permissions_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---






─ permissions ────────────────────────────────────────────────────────
  1. [session] bash: ls/*
  2. [session] web_fetch: https://example.com/*
  3. [workspace] bash: cat/*
  4. [workspace] bash: cat/* /etc/*
  5. [workspace] write_file: src/**/*.rs



 ○ normal                                                       1:1 0%
