crates/tui/tests/storybook/snapshots/app_dialog_command__permissions_dialog.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 70 16
  6   0   2 fg=AnsiValue(208)
  6   2  11 fg=AnsiValue(208) attrs=dim
  6  13  57 fg=AnsiValue(208)
  7   0   1 bg=AnsiValue(237)
  7   1   1 fg=Black bg=White
  7   2   3 bg=AnsiValue(237) attrs=dim
  7   5  20 fg=AnsiValue(208) bg=AnsiValue(237)
  7  25  45 bg=AnsiValue(237)
  8   1   4 attrs=dim
  9   1   4 attrs=dim
 10   1   4 attrs=dim
 11   1   4 attrs=dim
 15   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 15  10  54 bg=AnsiValue(233)
 15  64   6 fg=AnsiValue(244) bg=AnsiValue(233)
