crates/tui/tests/storybook/snapshots/app_dialog_command__ps_dialog_list_and_details_wrap_command.step-1.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---








─ ps proc_123 ────────────────────────────────────────────────────────
 pid       4242
 status    running
 duration  2m 05s
 command   ls -ld /Users/leo/.dotfiles; realpath
           /Users/leo/.dotfiles 2>/dev/null || true; cd
           /Users/leo/dev/rust/smelt && cargo test -p smelt-tui
 running tests...





 ○ normal                                                       1:1 0%
