crates/tui/tests/storybook/snapshots/app_dialog_command__ps_dialog_list_and_details_wrap_command.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 70 22
  8   0   2 fg=AnsiValue(208)
  8   2   2 fg=AnsiValue(208) attrs=dim
  8   4  66 fg=AnsiValue(208)
  9   1   1 fg=Black bg=White
  9   2  11 attrs=dim
 10   0   1 bg=AnsiValue(237)
 10   1  25 bg=AnsiValue(237) attrs=dim
 10  26   2 fg=Rgb { r: 255, g: 255, b: 255 } bg=AnsiValue(237)
 10  28   4 fg=Rgb { r: 253, g: 151, b: 31 } bg=AnsiValue(237)
 10  32  21 fg=Rgb { r: 255, g: 255, b: 255 } bg=AnsiValue(237)
 10  53   1 fg=Rgb { r: 249, g: 38, b: 114 } bg=AnsiValue(237)
 10  54  15 fg=Rgb { r: 255, g: 255, b: 255 } bg=AnsiValue(237)
 10  69   1 bg=AnsiValue(237)
 21   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 21  10  52 bg=AnsiValue(233)
 21  62   8 fg=AnsiValue(244) bg=AnsiValue(233)
